--- a/Angularapp/src/app/resume/resume.component.html
+++ b/Angularapp/src/app/resume/resume.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+
 <div class="bg">
     <div class="content">
       <div class="header">
@@ -124,12 +126,12 @@
           
             <div class="projects">
               <h5 class="title">PROJECTS</h5>
-              <h5 class="subtitle2">{{ resume.projects.project1.title }}</h5>
+              <h6 class="subtitle2">{{ resume.projects.project1.title }}</h6>
               <ul>
                 <li>{{ resume.projects.project1.desc }}</li>
               
               </ul>
-              <h5 class="subtitle2">{{ resume.projects.project2.title }}</h5>
+              <h6 class="subtitle2">{{ resume.projects.project2.title }}</h6>
               <ul>
                 <li>{{ resume.projects.project2.desc }}</li>
              
@@ -137,37 +139,37 @@
             </div>
             <div class="certifications">
               <h5 class="title">CERTIFICATIONS</h5>
-              <h5 class="subtitle2">
+              <h6 class="subtitle2">
                 {{ resume.certificates.certificate1.name }} ({{
                   resume.certificates.certificate1.date
                 }}
                 )
-              </h5>
+              </h6>
     
-              <h5 class="subtitle2">
+              <h6 class="subtitle2">
                 {{ resume.certificates.certificate2.name }} ({{
                   resume.certificates.certificate2.date
                 }}
                 )
-              </h5>
-              <h5 class="subtitle3">
+              </h6>
+              <h6 class="subtitle3">
                 {{ resume.certificates.certificate3.name }} ({{
                   resume.certificates.certificate3.date
                 }}
                 )
-              </h5>
+              </h6>
             </div>
             
             
             <div class="achievements">
               <h5 class="title">ACHIEVEMENTS</h5>
-              <h5 class="subtitle2">{{ resume.achievements.achievement1.name }}</h5>
+              <h6 class="subtitle2">{{ resume.achievements.achievement1.name }}</h6>
               <p>{{ resume.achievements.achievement1.description }}</p>
-              <h5 class="subtitle2">{{ resume.achievements.achievement2.name }}</h5>
+              <h6 class="subtitle2">{{ resume.achievements.achievement2.name }}</h6>
               <p>{{ resume.achievements.achievement2.description }}</p>
-              <h5 class="subtitle2">{{ resume.achievements.achievement3.name }}</h5>
+              <h6 class="subtitle2">{{ resume.achievements.achievement3.name }}</h6>
               <p>{{ resume.achievements.achievement3.description }}</p>
-              <h5 class="subtitle2">{{ resume.achievements.achievement4.name }}</h5>
+              <h6 class="subtitle2">{{ resume.achievements.achievement4.name }}</h6>
               <p>{{ resume.achievements.achievement4.description }}</p>
             </div>
             
